fix : safari layout bug fix (#694)

--- a/src/components/shop/index/shopGolfClubItem.module.css
+++ b/src/components/shop/index/shopGolfClubItem.module.css
@@ -102,10 +102,15 @@
     }
 
     .img_column {
-        width: 100%;
-        height: 100%;
+        width: 130px;
+        height: 130px;
         object-fit: contain;
         margin: 0 15px 0 0;
+    }
+
+    .img_row {
+        width: 130px;
+        height: 130px;
     }
 
     .container_row {
